Adds command class-statistics

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
     {
       "name": "Vladimir Kuprienko",
       "email": "vldmr.kuprienko@gmail.com"
+    },
+    {
+      "name": "Elena Kupriiets",
+      "email": "box32.lena@gmail.com"
     }
   ],
   "minimum-stability": "stable",
